# SYNAPSE

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SYNAPSE.sln
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  git_github_infrastructure.yml
docs/: program-composition-doctrine.md
docs/architecture/: synapse-host-boundary.md
infra/operator/: GITHUB_THREAD_BOOTSTRAP.md  GIT_GITHUB_INFRASTRUCTURE.md  github_context_probe.ps1  github_surface_catalog.json  verify_git_github_infrastructure.ps1
registry/: synapse.topology.json
scripts/: build-host.ps1  build-native.ps1  resolve-toolchain.ps1  verify_synapse_scaffold.ps1
src/host/Synapse.Host/: App.axaml  App.axaml.cs  Program.cs  Synapse.Host.csproj  app.manifest
src/host/Synapse.Host/Interop/: NativeSynapseBridge.cs
src/host/Synapse.Host/Models/: SynapseTopologyDocument.cs
src/host/Synapse.Host/ViewModels/: MainWindowViewModel.cs  SectionDescriptorViewModel.cs  ViewModelBase.cs
src/host/Synapse.Host/Views/: MainWindow.axaml  MainWindow.axaml.cs
src/native/: CMakeLists.txt
src/native/synapse_core/: CMakeLists.txt
src/native/synapse_core/include/: synapse_shell_contract.h
src/native/synapse_core/src/: synapse_shell_contract.c
